# calltoarms

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  requirements-dev.txt  run.py
.github/workflows/: ci.yaml  release.yaml
scripts/git-hooks/: pre-commit
src/calltoarms/: cli.py  console.py  gui.py  logging.py  network.py  process.py  settings.py  task_manager.py  util.py  window.py
tests/: test_util.py
